--- a/Plan Calculator/Views/Home/Index.cshtml
+++ b/Plan Calculator/Views/Home/Index.cshtml
@@ -1,8 +1,61 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+@model Plan_Calculator.Models.Plan
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="row">
+    <div class="col-md-4">
+        <form asp-action="Getplan">
+            <div class="form-group">
+                <div class="form-group">
+                    <label asp-for="price" class="control-label"></label>
+                    <input asp-for="price" class="form-control" />
+                </div>
+                <div class="form-group">
+                    <label asp-for="purchaseDate" class="control-label"></label>
+                    <input asp-for="purchaseDate" class="form-control" />
+                </div>
+                <input type="submit" value="Getplan" class="btn btn-primary" />
+            </div>
+        </form>
+    </div>
 </div>
+
+<span>@ViewBag.Message</span>
+
+@if (ViewBag.plans != null)
+{
+    @if (ViewBag.plans.Count > 0)
+    {
+<table>
+    <tr>
+        <th>Price</th>
+        <th>Purchase Date</th>
+        <th>Deposite</th>
+        <th>Installment Interval</th>
+        <th>Number of Installments</th>
+        <th>Installment Amount</th>
+        <th>Dates of pay</th>
+    </tr>
+    @foreach (var plan in ViewBag.plans)
+    {
+    <tr>
+        <td>@plan.price</td>
+        <td>@plan.purchaseDate</td>
+        <td>@plan.initDeposite()</td>
+        <td>@plan.installmentInterval</td>
+        <td>@plan.installments</td>
+        <td>@plan.installmentAmount()</td>
+        <td>
+            @foreach (var date in plan.installmentDates())
+            {
+                @date <br />
+            }
+
+        </td>
+    </tr>
+    }
+</table>
+    }
+
+}
